<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- navigation strings -->
    <string name="drawer_open">Setting Opened</string>
    <string name="drawer_close">Setting Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>עדכן פרופיל</item>
        <item >אודות</item>
        <item >התנתק</item>
    </string-array>

    <string-array name="radius_choices">
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>


    <!--app name and Main activity strings -->
    <string name="app_name">SuperZol</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">חיפוש</string>
    <string name="tab3">השוואה</string>
    <string name="tab2">סופר</string>
    <string name="tab1">רשימה</string>

    <!--other strings -->
    <string name="sign_in">"התחברות"</string>
    <string name="sign_up">"הרשמה"</string>
    <string name="supermarket_address">המושבה 7 נשר</string>
    <string name="market_list">רשימת קניות</string>
    <string name="rami_levi">רמי לוי</string>
    <string name="str_atv_places">Enter Place Here</string>
    <string name="saveListMsg">"הרשימה נשמרה במערכת"</string>
    <string name="invalid_mail">"מייל לא חוקי"</string>
    <string name="invalid_pass">"סיסמא חייבת להכיל לפחות 8 תווים"</string>
    <string name="invalid_input">"כל השדות הם שדות חובה"</string>
    <string name="the_best_super">"הסופרים הזולים בקרבתך"</string>
    <string name="not_found_item">"לא נמצאו תוצאות עבור"</string>
    <string name="aboutSuperZol">
        \n\n\n
        סופר זול מאפשרת לכם להשוות את סל הקניות שלכם בין הסופרים השונים הנמצאים בקרבתכם.
 \n\n
        בעקבות חוק המזון אותו הוציאה הממשלה בחודש מאי האחרון נציג לכם את המחירים העדכניים ביותר עבור מוצרים ברשתות המזון השונות.
        \n
        שווה לבדוק אותנו
        סופר-זול
        \n
    </string>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_action</item>
    </array>
    
    <!-- Content Description -->
    <string name="label_email">"מייל"</string>
    <string name="label_details_user">"פרטי משתמש"</string>
    <string name="label_password">"סיסמא"</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="label_radius">"רדיוס עד "</string>
    <string name="label_adress">"כתובת"</string>
    <string name="button_register">"הרשמה"</string>
    <string name="button_update">"עדכון"</string>
    <string name="title_activity_maps">Map</string>

</resources>
