<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center_horizontal"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:layout_marginBottom="162dp"
            android:layout_above="@+id/view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/label_details_user"
                    android:layout_gravity="center"
                    android:id="@+id/txtTitle"
                    android:layout_column="5" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/etEmail"
                    android:layout_row="0"
                    android:layout_column="4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"
                    android:layout_row="0"
                    android:layout_column="5"
                    android:id="@+id/textView" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/etPass"
                    android:layout_row="1"
                    android:layout_column="4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_password"
                    android:layout_row="1"
                    android:layout_column="5"
                    android:id="@+id/textView2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:id="@+id/spRadius"
                    android:layout_row="4"
                    android:layout_column="4"
                    android:spinnerMode="dropdown"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/view"
                    android:layout_toStartOf="@+id/view" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_radius"
                    android:layout_row="4"
                    android:layout_column="5" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAddres"
                    android:drawableRight="@drawable/search"
                    android:layout_column="4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtLabelAddress"
                    android:text="@string/label_adress"
                    android:layout_column="5" />
            </TableRow>
        </TableLayout>

        <View
            android:layout_width="267dp"
            android:layout_height="196dp"
            android:background="@drawable/background_super"
            android:id="@+id/view"
            android:layout_above="@+id/registerButton"
            android:layout_alignRight="@+id/registerButton"
            android:layout_alignEnd="@+id/registerButton"
            android:layout_alignLeft="@+id/registerButton"
            android:layout_alignStart="@+id/registerButton"
            android:layout_gravity="center_horizontal|bottom" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:id="@+id/registerButton"
            android:singleLine="false"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center" />

    </FrameLayout>

</RelativeLayout>


